--- a/assets/scss/components/_trip-card.scss
+++ b/assets/scss/components/_trip-card.scss
@@ -30,6 +30,7 @@
         width: 100%;
         max-height: 200px;
         border-radius: var(--radius-md);
+        aspect-ratio: 3/4;
         @include mixins.tablet {
             max-height: 190px;
             border-radius: var(--radius-sm);
@@ -86,6 +87,7 @@
                 width: 20px;
                 height: 20px;
                 object-fit: contain;
+                aspect-ratio: 1/1;
             }
         }
     }
