--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,6 +21,7 @@
 @use "components/copyright";
 
 @use "layout/header";
+@use "layout/tours";
 @use "layout/plan";
 @use "layout/testimonials";
 @use "layout/cta";
