--- a/assets/scss/base/_mixins.scss
+++ b/assets/scss/base/_mixins.scss
@@ -703,6 +703,7 @@
     height: var(--icon-desktop);
     min-height: var(--icon-desktop);
     object-fit: contain;
+    aspect-ratio: 1/1;
 
     @include tablet {
         width: var(--icon-tablet);
@@ -753,6 +754,7 @@
     max-height: 56px;
     border-radius: 50px;
     object-fit: cover;
+    aspect-ratio: 1/1;
     @include tablet {
         width: 48px;
         min-width: 48px;
