--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3243,8 +3243,9 @@ body.no-scroll {
   display: flex;
   align-items: center;
   gap: var(--gutter-desktop);
+  padding-top: 0 !important;
 }
-@media (min-width: 768px) and (max-width: 991.9px) {
+@media (min-width: 768px) and (max-width: 1279.9px) {
   .hero {
     flex-direction: column;
     gap: var(--gutter-tablet);
@@ -3288,21 +3289,21 @@ body.no-scroll {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 750px;
+  min-height: 700px;
   overflow: hidden;
 }
 .hero__inner--visual::before {
   content: "";
   position: absolute;
-  width: 515px;
-  height: 515px;
+  width: 600px;
+  height: 600px;
   background: radial-gradient(circle, rgba(232, 155, 42, 0.35), rgba(232, 155, 42, 0));
   filter: blur(75px);
   z-index: 0;
   pointer-events: none;
   aspect-ratio: 1/1;
 }
-@media (min-width: 768px) and (max-width: 991.9px) {
+@media (min-width: 768px) and (max-width: 1279.9px) {
   .hero__inner--visual::before {
     width: 515px;
     height: 515px;
@@ -3320,7 +3321,7 @@ body.no-scroll {
     height: 355px;
   }
 }
-@media (min-width: 768px) and (max-width: 991.9px) {
+@media (min-width: 768px) and (max-width: 1279.9px) {
   .hero__inner--visual {
     width: 100%;
     min-height: 650px;
@@ -3335,8 +3336,16 @@ body.no-scroll {
 @media (max-width: 464.9px) {
   .hero__inner--visual {
     width: 100%;
-    min-height: 450px;
+    min-height: 350px;
   }
+}
+.hero__inner-img-main {
+  -o-object-fit: contain;
+     object-fit: contain;
+  aspect-ratio: 1/1;
+  position: relative;
+  margin-top: auto;
+  z-index: 2;
 }
 .hero__header {
   display: flex;
