--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -6,7 +6,8 @@
     display: flex;
     align-items: center;
     gap: var(--gutter-desktop);
-    @media (min-width: 768px) and (max-width: 991.9px) {
+    padding-top: 0 !important;
+    @include mixins.tablet {
         flex-direction: column;
         gap: var(--gutter-tablet);
     }
@@ -37,20 +38,20 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            min-height: 750px;
+            min-height: 700px;
             overflow: hidden;
             &::before {
                 content: "";
                 position: absolute;
-                width: 515px;
-                height: 515px;
+                width: 600px;
+                height: 600px;
                 background: radial-gradient(circle, rgba(232, 155, 42, 0.35), rgba(232, 155, 42, 0));
                 filter: blur(75px);
                 z-index: 0;
                 pointer-events: none;
                 aspect-ratio: 1/1;
 
-                @media (min-width: 768px) and (max-width: 991.9px) {
+                @include mixins.tablet {
                     width: 515px;
                     height: 515px;
                 }
@@ -63,7 +64,7 @@
                     height: 355px;
                 }
             }
-            @media (min-width: 768px) and (max-width: 991.9px) {
+            @include mixins.tablet {
                 width: 100%;
                 min-height: 650px;
             }
@@ -73,7 +74,16 @@
             }
             @include mixins.xs {
                 width: 100%;
-                min-height: 450px;
+                min-height: 350px;
+            }
+        }
+        &-img {
+            &-main {
+                object-fit: contain;
+                aspect-ratio: 1/1;
+                position: relative;
+                margin-top: auto;
+                z-index: 2;
             }
         }
     }
