--- a/assets/scss/layout/_tours.scss
+++ b/assets/scss/layout/_tours.scss
@@ -77,8 +77,12 @@
         }
         &-img {
             width: 100%;
-            height: 347px;
-            object-fit: cover;
+            height: 327px;
+            & img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
         &-content {
             display: flex;
