--- a/assets/scss/components/_trip-card.scss
+++ b/assets/scss/components/_trip-card.scss
@@ -28,20 +28,12 @@
     }
     &__img {
         width: 100%;
-        max-height: 200px;
-        border-radius: var(--radius-md);
-        aspect-ratio: 3/4;
-        @include mixins.tablet {
-            max-height: 190px;
-            border-radius: var(--radius-sm);
-        }
-        @include mixins.mobile {
-            max-height: 180px;
-            border-radius: 12px;
-        }
-        @include mixins.xs {
-            max-height: 180px;
-            border-radius: 12px;
+        max-height: 100%;
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: var(--radius-md);
         }
     }
     &__content {
