--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1726,7 +1726,8 @@ body.no-scroll {
   min-height: 64px;
   max-height: 64px;
   border-radius: 12px;
-  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .progress-card__img {
